--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,15 @@ body {
 }
 
 .vis {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  position: absolute;
   left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.vis>div {
+  width: 100%;
+  height: 100%;
 }
