--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   font-family: sans-serif;
   padding: 0;
   margin: 0;
-  background-color: white;
+  background-color: rgb(192, 40, 40);
 }
 
 .vis {
@@ -24,7 +24,3 @@ body {
   display: flex;
 }
 
-.vis>div {
-  width: 100%;
-  height: 100%;
-}
